add admin and login

--- a/Web.config
+++ b/Web.config
@@ -6,10 +6,43 @@
   -->
 
 <configuration>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+  <connectionStrings>
+    <add name="SqlServices" connectionString="Data Source=TMTXT-PC\SQLEXPRESS;Initial Catalog=WarehouseManagement;User ID=sa;Password=123456"/>
+  </connectionStrings>
+  <system.web>
+    <compilation debug="false" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
 
-    <system.web>
-      <compilation debug="false" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-    </system.web>
+    <authentication mode="Forms">
+      <forms cookieless="UseCookies" defaultUrl="Default.aspx"
+          loginUrl="Login.aspx" protection="All" timeout="30">
+      </forms>
+    </authentication>
+    <authorization>
+      <allow users="*"/>
+    </authorization>
+    <roleManager enabled="true" defaultProvider="CustomRoleProvider">
+      <providers>
+        <add name="CustomRoleProvider" connectionStringName="SqlServices"
+             applicationName="WarehouseManagement" type="System.Web.Security.SqlRoleProvider"/>
+      </providers>
+    </roleManager>
+    <membership defaultProvider="CustomMembershipProvider">
+      <providers>
+        <add name="CustomMembershipProvider"
+             connectionStringName="SqlServices"
+             applicationName="WarehouseManagement"
+             enablePasswordRetrieval="false"
+             enablePasswordReset="true"
+             requiresQuestionAndAnswer="false"
+             requiresUniqueEmail="true"
+             passwordFormat="Hashed"
+             type="System.Web.Security.SqlMembershipProvider"/>
+      </providers>
+    </membership>
+  </system.web>
 
 </configuration>
