--- a/Web.config
+++ b/Web.config
@@ -17,8 +17,8 @@
     <httpRuntime targetFramework="4.5" />
 
     <authentication mode="Forms">
-      <forms cookieless="UseCookies" defaultUrl="Default.aspx"
-          loginUrl="Login.aspx" protection="All" timeout="30">
+      <forms cookieless="UseCookies" defaultUrl="/Default.aspx"
+          loginUrl="/Login.aspx" protection="All" timeout="30">
       </forms>
     </authentication>
     <authorization>
