patient update with ajax calendar extender

--- a/Web.config
+++ b/Web.config
@@ -1,39 +1,43 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <connectionStrings>
     <add name="SqlServices" connectionString="Data Source=TMTXT-PC\SQLEXPRESS;Initial Catalog=ElectronicMedicalRecord;User ID=sa;Password=123456" />
-    <add name="ElectronicMedicalRecordConnectionString" connectionString="Data Source=TMTXT-PC\SQLEXPRESS;Initial Catalog=ElectronicMedicalRecord;Persist Security Info=True;User ID=sa;Password=123456"
-      providerName="System.Data.SqlClient" />
+    <add name="ElectronicMedicalRecordConnectionString" connectionString="Data Source=TMTXT-PC\SQLEXPRESS;Initial Catalog=ElectronicMedicalRecord;Persist Security Info=True;User ID=sa;Password=123456" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="false" targetFramework="4.5">
       <assemblies>
-        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms cookieless="UseCookies" defaultUrl="/Default.aspx" loginUrl="/Login.aspx" protection="All" timeout="30"/>
+      <forms cookieless="UseCookies" defaultUrl="/Default.aspx" loginUrl="/Login.aspx" protection="All" timeout="30" />
     </authentication>
     <authorization>
-      <allow users="*"/>
+      <allow users="*" />
     </authorization>
     <roleManager enabled="true" defaultProvider="CustomRoleProvider">
       <providers>
-        <add name="CustomRoleProvider" connectionStringName="SqlServices" applicationName="WarehouseManagement" type="System.Web.Security.SqlRoleProvider"/>
+        <add name="CustomRoleProvider" connectionStringName="SqlServices" applicationName="WarehouseManagement" type="System.Web.Security.SqlRoleProvider" />
       </providers>
     </roleManager>
     <membership defaultProvider="CustomMembershipProvider">
       <providers>
-        <add name="CustomMembershipProvider" connectionStringName="SqlServices" applicationName="WarehouseManagement" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="true" passwordFormat="Hashed" type="System.Web.Security.SqlMembershipProvider"/>
+        <add name="CustomMembershipProvider" connectionStringName="SqlServices" applicationName="WarehouseManagement" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="true" passwordFormat="Hashed" type="System.Web.Security.SqlMembershipProvider" />
       </providers>
     </membership>
+    <pages>
+      <controls>
+        <add tagPrefix="asp" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
+      </controls>
+    </pages>
   </system.web>
 </configuration>
