pooling = false in connection string to avoid SemaphoreFullException

--- a/Web.config
+++ b/Web.config
@@ -8,8 +8,8 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
   <connectionStrings>
-    <add name="SqlServices" connectionString="Data Source=TMTXT-PC\SQLEXPRESS;Initial Catalog=ElectronicMedicalRecord;User ID=sa;Password=123456"/>
-    <add name="ElectronicMedicalRecordConnectionString" connectionString="Data Source=TMTXT-PC\SQLEXPRESS;Initial Catalog=ElectronicMedicalRecord;Persist Security Info=True;User ID=sa;Password=123456" providerName="System.Data.SqlClient"/>
+    <add name="SqlServices" connectionString="Data Source=TMTXT-PC\SQLEXPRESS;Initial Catalog=ElectronicMedicalRecord;User ID=sa;Password=123456;Pooling=False"/>
+    <add name="ElectronicMedicalRecordConnectionString" connectionString="Data Source=TMTXT-PC\SQLEXPRESS;Initial Catalog=ElectronicMedicalRecord;Persist Security Info=True;User ID=sa;Password=123456;Pooling=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
