create the web service to view doctors list

--- a/Web.config
+++ b/Web.config
@@ -40,4 +40,16 @@
       </controls>
     </pages>
   </system.web>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="DoctorServiceSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:49999/WebServices/DoctorService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="DoctorServiceSoap"
+        contract="DoctorServiceReference.DoctorServiceSoap" name="DoctorServiceSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
