add hospital web service and page to view all hospitals

--- a/Web.config
+++ b/Web.config
@@ -44,12 +44,16 @@
     <bindings>
       <basicHttpBinding>
         <binding name="DoctorServiceSoap" />
+        <binding name="HospitalServiceSoap" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://localhost:49999/WebServices/DoctorService.asmx"
         binding="basicHttpBinding" bindingConfiguration="DoctorServiceSoap"
         contract="DoctorServiceReference.DoctorServiceSoap" name="DoctorServiceSoap" />
+      <endpoint address="http://localhost:49999/WebServices/HospitalService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="HospitalServiceSoap"
+        contract="HospitalServiceReference.HospitalServiceSoap" name="HospitalServiceSoap" />
     </client>
   </system.serviceModel>
 </configuration>
