--- a/Web.config
+++ b/Web.config
@@ -12,6 +12,11 @@
     <add name="ElectronicMedicalRecordConnectionString" connectionString="Data Source=TMTXT-PC\SQLEXPRESS;Initial Catalog=ElectronicMedicalRecord;Persist Security Info=True;User ID=sa;Password=123456;Pooling=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
+    <profile>
+      <properties>
+        <add name="Theme" defaultValue="Default"/>
+      </properties>
+    </profile>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
